test/exits/bradc/multipleHalts.good
multipleHalts.chpl:2: error: halt reached - This should only get printed once
