test/exits/bradc/multipleHalts.chpl
coforall i in 1..2 {
  halt("This should only get printed once");
}
